# parallel-algorythms

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
src/: gen.hpp
src/par/: bfs.hpp  qsort.hpp
src/seq/: bfs.hpp  qsort.hpp
